Fully implement hourly weather & improve UI

--- a/index.html
+++ b/index.html
@@ -128,22 +128,21 @@
                                 fill="#DFF1FB"></path>
                         </g>
                     </svg>
-                    <div class="current-weather-temp-text">
+                    <div class="current-weather-temp-value">
                         15°
                     </div>
                 </div>
                 <div class="current-weather-summary">
                     <div class="current-weather-apparent-temp">
                         <div class="current-weather-apparent-temp-label">Feels like</div>
-                        <div class="current-weather-apparent-temp-text">16°</div>
+                        <div class="current-weather-apparent-temp-value">16°</div>
                     </div>
                     <div class="current-weather-description">Mostly cloudy</div>
                 </div>
             </div>
             <div class="current-weather-details">
-                <div class="current-weather-detail current-weather-precipitation-prob"
-                    title="Probability of precipitation">
-                    <svg class="icon current-weather-detail-icon current-weather-precipitation-prob-icon" width="48px"
+                <div class="current-weather-detail current-weather-precipitation" title="Probability of precipitation">
+                    <svg class="icon current-weather-detail-icon current-weather-precipitation-icon" width="48px"
                         height="48px" fill="#ffffff" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff"
                         stroke-width="0.00024000000000000003" viewBox="1 2 22 20">
                         <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -154,9 +153,9 @@
                             </path>
                         </g>
                     </svg>
-                    <div class="current-weather-detail-label current-weather-precipitation-prob-label">Precipitation
+                    <div class="current-weather-detail-label current-weather-precipitation-label">Precipitation
                     </div>
-                    <div class="current-weather-detail-text current-weather-precipitation-prob-text">5%</div>
+                    <div class="current-weather-detail-value current-weather-precipitation-value">5%</div>
                 </div>
                 <div class="current-weather-detail current-weather-humidity" title="Humidity in the air">
                     <svg class="icon current-weather-detail-icon current-weather-humidity-icon" width="48px"
@@ -180,7 +179,7 @@
                         </g>
                     </svg>
                     <div class="current-weather-detail-label current-weather-humidity-label">Humidity</div>
-                    <div class="current-weather-detail-text current-weather-humidity-text">35%</div>
+                    <div class="current-weather-detail-value current-weather-humidity-value">35%</div>
                 </div>
                 <div class="current-weather-detail current-weather-uv" title="UV index" title="UV index">
                     <svg class="icon current-weather-detail-icon current-weather-uv-icon" width="48px" height="48px"
@@ -195,7 +194,7 @@
                         </g>
                     </svg>
                     <div class="current-weather-detail-label current-weather-uv-label">UV Index</div>
-                    <div class="current-weather-detail-text current-weather-uv-text">3/11</div>
+                    <div class="current-weather-detail-value current-weather-uv-value">3/11</div>
                 </div>
                 <div class="current-weather-detail current-weather-wind" title="Wind">
                     <svg class="icon current-weather-detail-icon current-weather-wind-icon" width="48px" height="48px"
@@ -215,7 +214,7 @@
                         </g>
                     </svg>
                     <div class="current-weather-detail-label current-weather-wind-label">Wind</div>
-                    <div class="current-weather-detail-text current-weather-wind-text">17 km/h</div>
+                    <div class="current-weather-detail-value current-weather-wind-value">17 km/h</div>
                 </div>
                 <div class="current-weather-detail current-weather-pressure" title="Pressure of the air">
                     <svg class="icon current-weather-detail-icon current-weather-pressure-icon" width="48px"
@@ -239,7 +238,7 @@
                         </g>
                     </svg>
                     <div class="current-weather-detail-label current-weather-pressure-label">Pressure</div>
-                    <div class="current-weather-detail-text current-weather-pressure-text">1018 mb</div>
+                    <div class="current-weather-detail-value current-weather-pressure-value">1018 mb</div>
                 </div>
                 <div class="current-weather-detail current-weather-visibility" title="Visibility">
                     <svg class="icon current-weather-detail-icon current-weather-visibility-icon" width="48px"
@@ -254,7 +253,7 @@
                         </g>
                     </svg>
                     <div class="current-weather-detail-label current-weather-visibility-label">Visibility</div>
-                    <div class="current-weather-detail-text current-weather-visibility-text">10 km</div>
+                    <div class="current-weather-detail-value current-weather-visibility-value">10 km</div>
                 </div>
             </div>
         </div>
