Improve search functionality

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <div class="title">Weather Forecast</div>
         </div>
         <div class="header-weather">
-            <div class="header-loc">Cairo</div>
-            <div class="header-temp">15°</div>
+            <div class="header-loc"></div>
+            <div class="header-temp"></div>
         </div>
         <div class="search-bar-container">
             <div class="search-bar">
@@ -109,7 +109,11 @@
             </div>
         </div>
     </header>
-    <div class="content"></div>
+    <div class="content">
+        <div class="location-message">
+            Either enable location permission in your browser, or search for a location.
+        </div>
+    </div>
 </body>
 
 <script type="module" src="./dist/script.js"></script>
