improve handling location permission

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <label class="search-label" for="search-input">Search Location</label>
                 <span class="search-separator">|</span>
                 <input class="search-input" type="text" autocomplete="off" name="search-input" id="search-input"
-                    placeholder="Egypt, Cairo">
+                    placeholder="">
                 <ul class="search-results">
                 </ul>
             </div>
