Improve responsive design

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header>
-        <div class="logo-container">
-            <div class="logo">
+        <div class="logo">
+            <div class="logo-icon">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                     viewBox="0 0 64 64" xml:space="preserve" fill="#000000">
                     <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -71,7 +71,7 @@
                     </g>
                 </svg>
             </div>
-            <div class="title">Weather Forecast</div>
+            <div class="logo-title">Weather Forecast</div>
         </div>
         <div class="header-weather">
             <div class="header-loc"></div>
@@ -111,7 +111,7 @@
     </header>
     <div class="content">
         <div class="location-message">
-            Either enable location permission in your browser, or search for a location.
+            Either enable location permission, or use the search bar.
         </div>
     </div>
 </body>
