--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
-    <title>Weather Forecast</title>
+    <title>The Forecast</title>
 </head>
 
 <body>
@@ -71,7 +71,7 @@
                     </g>
                 </svg>
             </div>
-            <div class="logo-title">Weather Forecast</div>
+            <div class="logo-title">The Forecast</div>
         </div>
         <div class="header-weather">
             <div class="header-loc"></div>
